
2010-05-27
  Bumped versionName 1.3.2 for release
  Network switch bug fix
  No feeds on first login bug fix
  Notification bug fix

2010-05-26
  Bumped versionName 1.3.2 for release
  Authentication flow bug fix
  Added test plan file

2010-05-24
  Bumped versionName 1.3.1 for release
  Imported trace source instead of using jars.
    I may want to log handled exceptions.
  Reworked service binding logic in YammerActivity.
    Should prevent NPEs in handling AUTHENTICATION_COMPLETE intent.
  Swallow exceptions from unbindService
    Exceptions were being thrown from Froyo
  Fixed bug preventing loading of messages after authentication.

2010-05-23
  Bumped versionCode for release (23)
  Fixed posting bug
  Fixed wake lock release bug

2010-05-20
  Bumped versionCode for release (22)
  More bug fixes
  Bumped versionCode for release (21)
  Fixed stupid login bug

2010-04-21
  Allow User to select network (ANDROID-53)
  More code cleanup

2010-03-09
  Fixed notifications (ANDROID-50)

2010-03-01
  First pass at Oauth+WRAP authentication

2010-02-02
  Bumped versionCode for release (20)
  Added UpdateOnResume option (ANDROID-25)
  Changed update timeouts (ANDROID-26)
  More code cleanup

2010-01-18
  Bumped versionCode for release (19)
  Fixed problem with notifications on reload

2010-01-17
  Bumped versionCode for release (18)
  Added message click preference (ANDROID-21)
  More code cleanup/refactoring.
    Users will probably have to re-authenticate after upgrade.

2010-01-06
  Bumped versionCode for release (17)
  More code cleanup/refactoring.
  Attempt to speed up posting (Bug: ANDROID-28)
  Attempt to fix post/refresh bug on G1 (Bug: ANDROID-31)

2010-01-04
  Bumped versionCode for release
  Only clear text editor if it contains the prompt (Bug: ANDROID-29)
  Fixed Updates selector title.  (Bug: ANDROID-26)
    
2009-12-23
  Changed package to com.yammer.v1 for re-release